--- a/src/components/organisms/zamow/results/results.css
+++ b/src/components/organisms/zamow/results/results.css
@@ -5,6 +5,11 @@
 .p-container {
   margin: 0 auto;
   width: 80%;
+  text-align: justify;
+}
+
+.p-container p {
+  margin: 30px 0;
 }
 
 .free-test h2 {
@@ -52,19 +57,19 @@
   text-align: center;
   margin-bottom: 50px;
 }
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1024px) {
   .free-test {
     padding: 40px 0 70px;
+  }
 }
-}
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 767px) {
   .result-title {
     font-size: 50px;
-}
-.free-test h2 {
-  font-size: 35px;
-}
-.p-container {
-  width: 100%;
-}
+  }
+  .free-test h2 {
+    font-size: 35px;
+  }
+  .p-container {
+    width: 100%;
+  }
 }
