--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -276,8 +276,8 @@
 .eyes {
   position: absolute;
   z-index: 1;
-  left: 5%;
-  top: -260%;
+  left: 45px;
+  top: -280px;
 }
 
 .ratingBlackCard img {
@@ -921,8 +921,7 @@ img.opinionBnnaerImg {
   }
 
   .eyes {
-    left: 11%;
-    top: 38%;
+    top: -265px;
     width: 210px;
   }
 }
