--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -173,10 +173,12 @@
   cursor: pointer;
   font-weight: 700;
   line-height: 24px;
-  padding: 10px 20px;
+  padding: 10px 30px;
   transition-duration: 0.15s;
   transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
   background-color: white;
+  border: 2px solid black;
+  text-align: center;
 }
 
 .ResultTable_Table_Row_Button:hover {
@@ -376,6 +378,10 @@ img.strategyImg {
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
     rgba(0, 0, 0, 0) 0px 0px 0px 0px;
   background-color: transparent;
+  border: 2px solid black;
+  text-align: center;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .Analysis_Card_Content_Button_Clicked {
@@ -390,6 +396,8 @@ img.strategyImg {
   color: #373737;
   background-color: #00fe04;
   border: 2px solid #00fe04;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .Analysis_Card_Content_Button:hover {
@@ -840,6 +848,10 @@ img.strategyImg {
   text-align: left;
 }
 
+.float-right {
+  float: right;
+}
+
 .ImageAdvantage_Button {
   cursor: pointer;
   font-weight: 700;
@@ -850,6 +862,8 @@ img.strategyImg {
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
     rgba(0, 0, 0, 0) 0px 0px 0px 0px;
   background-color: transparent;
+  border: 2px solid black;
+  width: fit-content;
 }
 
 .ImageAdvantage_Button_Clicked {
@@ -864,11 +878,13 @@ img.strategyImg {
   color: #373737;
   background-color: #00fe04;
   border: 2px solid #00fe04;
+  width: fit-content;
 }
 
 .ImageAdvantage_Button:hover {
   background-color: #282828;
   color: #e3e3e3;
+  width: fit-content;
 }
 
 .ImageAdvantage_Dropdown {
