--- a/src/components/organisms/marketing-consulting/pricing/pricing-option.css
+++ b/src/components/organisms/marketing-consulting/pricing/pricing-option.css
@@ -29,11 +29,10 @@ p.po_subtitle {
   margin-top: 70px;
 }
 
-
 .po_card_custom h2 {
   font-size: 22px;
   font-weight: 700;
-  margin-bottom: 15px ;
+  margin-bottom: 15px;
 }
 
 .po_input {
@@ -74,43 +73,57 @@ p.po_subtitle {
   gap: 30px;
 }
 
-@media only screen and (max-width: 1024px){
+.brand_mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
   .po_card_custom {
     width: 100%;
   }
   .po_pricing_sec {
     padding: 50px 0 80px;
+  }
+  .po_title {
+    font-size: 40px;
+  }
+  .po_brands {
+    display: block;
+    text-align: start;
+    padding: 50px 20px;
+  }
+  .po_brands p {
+    text-align: left;
+  }
+  .po_brands img {
+    width: 100%;
+  }
 }
-.po_title {
-  font-size: 40px;
-}
-.po_brands {
-  display: block;
-  text-align: start;
-  padding: 50px 20px;
-}
-.po_brands p {
-  text-align: left;
-}
-.po_brands img {
-  width: 100%;
-}
-}
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 767px) {
   .po_title {
     font-size: 30px;
-}
-.po_card_custom{
-  padding: 50px 20px;
-}
-.po_card_custom h2 {
-  font-size: 20px;
-}
-.po_brands {
-  text-align: start;
-}
-.po_brands {
-  text-align: start;
-  display: block;
-}
+  }
+  .po_card_custom {
+    padding: 50px 20px;
+  }
+  .po_card_custom h2 {
+    font-size: 20px;
+  }
+  .po_brands {
+    text-align: start;
+  }
+  .po_brands {
+    text-align: start;
+    display: block;
+    background-color: transparent;
+    color: #808080;
+  }
+
+  .brand_desktop {
+    display: none;
+  }
+
+  .brand_mobile {
+    display: block;
+  }
 }
