--- a/src/components/organisms/zamow/accordion/accordion.css
+++ b/src/components/organisms/zamow/accordion/accordion.css
@@ -27,7 +27,7 @@
 }
 
 .info {
-  padding: 0 24px;
+  /* padding: 0 24px; */
   width: 90%;
   font-size: 22px;
   font-weight: 300;
@@ -36,28 +36,38 @@
 .question header {
   display: flex;
   justify-content: space-between;
-  padding: 24px 24px;
+  /* padding: 24px 24px; */
+  align-items: flex-start;
 }
 
 .icon {
   font-size: 24px;
 }
-@media only screen and (max-width:767px){
-  .accordion-heading {
-    font-size: 40px !important; 
-}
-.question h4 {
-  font-size: 20px !important;
-  margin-bottom: 20px;
-}
-.question header {
-  padding: 24px 0px;
-}
-.question {
-  padding: 0px 0px;
-}
-.info {
-  font-size:18px;
+
+.zamow_accordion {
+  width: 75%;
+  margin: 0 auto;
 }
 
+@media only screen and (max-width: 767px) {
+  .accordion-heading {
+    font-size: 40px !important;
+  }
+  .question h4 {
+    font-size: 20px !important;
+    margin-bottom: 20px;
+  }
+  .question header {
+    /* padding: 24px 0px; */
+  }
+  .question {
+    /* padding: 0px 0px; */
+  }
+  .info {
+    font-size: 18px;
+  }
+
+  .zamow_accordion {
+    width: 100%;
+  }
 }
