ux market section dynamic title, opinie rating eye animation test, and paragraph style fixes for zamow

--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -274,10 +274,15 @@
 }
 
 .eyes {
-  position: absolute;
+  /* position: absolute;
   z-index: 1;
   left: 45px;
-  top: -280px;
+  top: -280px; */
+
+  position: absolute;
+  z-index: 1;
+  left: 0px;
+  top: -225px;
 }
 
 .ratingBlackCard img {
@@ -664,6 +669,11 @@
 img.opinionBnnaerImg {
   margin-top: 0px;
 }
+
+.emoFace {
+  position: relative;
+}
+
 /* ------------------------------media screen ------------------------------- */
 @media only screen and (max-width: 1024px) {
   .opinionContent h1 {
@@ -763,6 +773,9 @@ img.opinionBnnaerImg {
 }
 
 @media only screen and (max-width: 767px) {
+  .emoFace {
+    width: 200px;
+  }
   .opinionBanner img {
     width: 70%;
     margin-inline: auto;
@@ -921,7 +934,9 @@ img.opinionBnnaerImg {
   }
 
   .eyes {
-    top: -265px;
-    width: 210px;
+    top: -268px;
+    left: 0px;
+    width: 200px;
+    max-width: 450px;
   }
 }
