--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -43,7 +43,7 @@
   border: none;
   font-weight: 500;
   box-shadow: 0 6px 0px #981a04;
-  margin: 0 auto;
+  margin: 30px auto 0px;
   display: block;
 }
 
