--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -1024,117 +1024,10 @@ img.strategyImg {
   font-size: 55px;
   text-align: center;
   font-weight: 600;
-  margin: 40px 0 0;
+  margin: 70px 0 0;
 }
 /* 16. OurClients */
-.OurClients {
-  margin-bottom: 150px;
-}
 
-.OurClients_Title {
-  color: #333333;
-  font-size: 62px;
-  font-weight: 700;
-  line-height: 55.8px;
-  text-align: center;
-  margin-bottom: 120px;
-}
-
-.OurClients_Card_Container {
-  margin-top: -220px;
-}
-
-.OurClients_Card_One {
-  background-color: #ffffff;
-  border-radius: 25.6px;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-  margin-bottom: -20px;
-}
-
-.OurClients_Card_One_Title {
-  font-size: 38.4px;
-  font-weight: 600;
-  line-height: 46.08px;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.OurClients_Card_One_Content {
-  font-size: 25.6px;
-  font-weight: 300;
-  line-height: 30.72px;
-  padding-inline: 40px;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.OurClients_Card_One_Button_Container {
-  display: flex;
-  justify-content: center;
-}
-
-.OurClients_Card_One_Button {
-  border: 4px solid #ffc602;
-  border-radius: 256px;
-  background-color: #ffc602;
-  color: black;
-  font-size: 25.6px;
-  font-weight: 700;
-  line-height: 30.72px;
-  text-align: center;
-  transition-duration: 0.15s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 7.68px 25.6px;
-}
-
-.OurClients_Card_One_Button:hover {
-  background-color: transparent;
-  color: #ffc602;
-}
-
-.OurClients_Card_Two {
-  display: flex;
-  align-items: center;
-
-  border-radius: 0px 0px 25.6px 25.6px;
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(0, 0, 0, 0.15) 4px 4px 15px 0px, #ffffff 0px 0px 0px 0px,
-    #ffffff 2px 2px 2px 0px inset, #c7c7c7 -2px -2px 2px 0px inset;
-  padding-inline: 50px;
-  padding-block: 30px;
-}
-
-.OurClients_Card_Two_Content {
-  color: #8f8f8f;
-  font-size: 23.04px;
-  line-height: 34.56px;
-  transform: matrix(1, 0, 0, 1, 38.4, 0);
-}
-
-.YellowMark {
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
-  border-radius: 10.0147px;
-  display: inline-block;
-  font-size: 38.4px;
-  font-weight: 600;
-  line-height: 34.56px;
-  text-align: center;
-}
-
-.YelloMarkReverse {
-  background-image: linear-gradient(90deg, #ffd042, #ffdc74);
-  border-radius: 6.00883px;
-  color: #eeeeee;
-  display: inline-block;
-  font-size: 23.04px;
-  font-weight: 600;
-  line-height: 20.736px;
-}
-
-.OurClients_Marquee {
-  z-index: -10;
-}
 
 /* 17. Price */
 .Price {
@@ -1555,18 +1448,12 @@ img.strategyImg {
 }
 
 /* *** */
-.OurClients_Slide {
-  display: flex;
-  flex-direction: column;
-  padding-inline: 50px;
-  padding-top: 70px;
-  padding-bottom: 50px;
-}
 
-.OurClients_Slide_Last {
+
+/* .OurClients_Slide_Last {
   padding-inline: 180px;
   padding-block: 110px;
-}
+} */
 
 .OurClients_Slide_Container {
   display: flex;
@@ -1988,8 +1875,8 @@ img.strategyImg {
   }
 
   .Strategy_Title {
-    font-size: 45px;
-    line-height: 50.8px;
+    font-size: 40px;
+    line-height: 45px;
   }
 
   .feature img {
@@ -2157,8 +2044,8 @@ img.strategyImg {
   }
 
   .ImageAdvantage_Title {
-    font-size: 45px;
-    line-height: 56.5px;
+    font-size: 40px;
+    line-height: 50px;
   }
 
   .ImageAdvantage_Content {
@@ -2184,7 +2071,7 @@ img.strategyImg {
   }
 
   .InviteCustomer_Title {
-    font-size: 45px;
+    font-size: 40px;
     line-height: 50.8px;
     margin-bottom: 70px;
   }
@@ -2328,6 +2215,13 @@ img.strategyImg {
   .faqContainer {
     padding: 5px 30px;
   }
+  .clientReviewHeading h2 {
+    font-size: 40px;
+}
+.WhatRecieve_Content_Two {
+  font-size: 22px;
+  line-height: 33.2px;
+}
 }
 
 .AnswerAll_Image img {
