--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -105,11 +105,12 @@
 }
 
 .hardResult h4 {
-  font-size: 50px;
+  font-size: 45px;
   text-align: left;
   font-weight: 500;
   color: #333333;
   margin: 0 0 50px 0px;
+  line-height: normal;
 }
 
 .hardResult h4 span {
@@ -225,14 +226,17 @@ img.hardImg {
   padding: 50px 0;
   background-image: linear-gradient(173deg, #f5f5f5 53%, #fbb1b6);
 }
-.socialVideo video{
+
+.socialVideo video {
   width: 800px !important;
   margin: 0 auto;
   display: block;
 }
-.brandingHeading{
+
+.brandingHeading {
   font-size: 55px !important;
 }
+
 /* -------------------------------media screen---------------------- */
 @media screen and (max-width: 1024px) {
   .enter img {
@@ -273,7 +277,8 @@ img.hardImg {
     border-radius: 0px 0px 50px 50px;
     overflow: hidden;
   }
-  .socialVideo video{
+
+  .socialVideo video {
     width: 100% !important;
   }
 }
@@ -295,6 +300,7 @@ img.hardImg {
 
   .ratingLogoImg {
     display: block;
+    margin-bottom: 0 !important;
   }
 
   .ratingLogoImg img {
@@ -304,7 +310,7 @@ img.hardImg {
   }
 
   .order .orderContent h2 {
-    font-size: 35px;
+    font-size: 30px;
     line-height: 45px;
     margin: 0 0 40px;
   }
@@ -321,12 +327,32 @@ img.hardImg {
   .order .orderContent button {
     font-size: 20px;
   }
+
   .ratingContent {
     margin-top: -200px;
     padding: 50px;
   }
+
   .order .orderImg img {
     border-radius: 0 0 50px 50px;
+  }
+
+  .hardResult h4 {
+    font-size: 28px;
+    text-align: center !important;
+  }
+  .Content p{
+    font-size: 22px;
+    line-height: 40px;
+  }
+  .hardBottomContent {
+    font-size: 35px !important;
+  }
+  .numbers {
+    padding: 0px 0 50px;
+  }
+  .enter {
+    padding: 0px 0 50px;
   }
 
 }
