--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -16,8 +16,6 @@
   align-items: center;
 }
 
-
-
 .headerLeftBtn {
   border-radius: 50px;
   padding: 5px 30px;
@@ -60,7 +58,6 @@
   align-items: center;
   gap: 8px;
   position: relative;
-
 }
 
 .dropBtn:after {
@@ -88,7 +85,7 @@
 .headerRightBtn {
   border-radius: 50px;
   padding: 5px 20px;
-  background: #ffc600;
+  background: #00bfff;
   color: rgb(1, 1, 1);
   font-weight: 500;
   font-size: 18px;
@@ -96,7 +93,6 @@
   transition: transform 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s,
     box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s,
     border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s;
-
 }
 
 .headerRightBtn a {
@@ -109,10 +105,9 @@
   color: rgb(0, 0, 0);
 }
 
-
 .navbar:hover .headerRightBtn {
   box-shadow: 0px 3px 0px #181818;
-  background: #ffc600;
+  background: #00bfff;
   color: black;
 }
 
@@ -156,8 +151,6 @@
   left: 0;
 }
 
-
-
 .navbar:hover .navRightMenu {
   color: rgb(9, 9, 9);
   font-size: 18px;
@@ -181,7 +174,6 @@
   padding: 50px 0;
   transition: transform 10s ease-in-out;
   transform: translateY(-100px);
-  
 }
 .headerDrop1:hover .dropMenu {
   display: block;
@@ -229,8 +221,6 @@
   padding: 40px 0;
 }
 
-
-
 .mobileMenuToggle {
   display: none;
 }
@@ -276,8 +266,6 @@
   display: none;
   flex-direction: column;
 }
-
-
 
 .dropMenu.dropOpen {
   display: block;
@@ -471,24 +459,22 @@
   }
 
   .dropMenu {
-    top: 130px
+    top: 130px;
   }
   .dropBtn {
     font-size: 16px;
-}
-.navbar {
-  padding: 20px 20px;;
-}
-.navRightMenu { 
-  display: inline;
-  font-size: 16px;
-}
-.headerRightBtn {
-  padding: 10px 10px;
-  font-size: 16px;
-}
-
-
+  }
+  .navbar {
+    padding: 20px 20px;
+  }
+  .navRightMenu {
+    display: inline;
+    font-size: 16px;
+  }
+  .headerRightBtn {
+    padding: 10px 10px;
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -523,8 +509,8 @@
   .mobileLeftBtn {
     box-shadow: 0px 3px 0px #ffffff;
     border: 2px solid #ffffff;
+  }
 }
 
+@media (max-width: 768px) {
 }
-
-@media (max-width: 768px) {}
