--- a/src/components/organisms/thanks-message/thanks.module.css
+++ b/src/components/organisms/thanks-message/thanks.module.css
@@ -42,7 +42,7 @@
     text-align: center;
     margin: 0 0 40px;
 }
-.thanksContainer a{
+.thanksContainer button{
     margin: 0 auto;
     display: block;
     padding: 10px 30px;
