--- a/src/app/projektowanie-ux/uxDesign.css
+++ b/src/app/projektowanie-ux/uxDesign.css
@@ -2609,7 +2609,7 @@ video.mobileVideo {
   }
 
   #numbers {
-    display: grid;
+    display: grid !important;
     justify-content: normal;
     grid-template-columns: auto auto;
   }
@@ -3046,6 +3046,7 @@ section.goodProcess {
 @media only screen and (max-width: 768px) {
   section.goodProcess {
     padding: 0 1rem;
+    row-gap: 0;
   }
   #videoSection> :nth-child(1) h2 {
     font-size: 34px;
@@ -3113,6 +3114,9 @@ padding: 0 20px;
 #ImageSection>div h2{
   font-size: 50px;
   line-height: 1.3;
+}
+.numberContainer{
+  padding: 0;
 }
 
 }
